feat: add activity log and main content layout to ProPing Monitor

--- a/src/index.html
+++ b/src/index.html
@@ -28,8 +28,18 @@
         </div>
 
         <!-- Main Dashboard -->
-        <div class="dashboard" id="dashboard">
-            <!-- Ping Cards go here -->
+        <div class="main-content">
+            <div class="dashboard" id="dashboard">
+                <!-- Ping Cards go here -->
+            </div>
+            
+            <div class="activity-log" id="activityLog">
+                <h3>Activity Log</h3>
+                <div class="log-entries" id="logEntries">
+                    <!-- Logs go here -->
+                    <div class="log-entry">Waiting for events...</div>
+                </div>
+            </div>
         </div>
     </div>
 
