--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,8 @@
                     <input type="text" id="targetName" placeholder="Name (e.g. Google DNS)">
                     <input type="text" id="targetIp" placeholder="IP / Host (e.g. 8.8.8.8)">
                     <button class="add-btn" id="addBtn">ADD TARGET</button>
+                    <!-- Settings Button -->
+                    <button class="settings-btn" id="settingsBtn" style="margin-top: 10px; background: #444;">⚙️ SMTP Settings</button>
                 </div>
 
                 <div class="target-list" id="targetList">
@@ -40,6 +42,48 @@
                     <div class="log-entry">Waiting for events...</div>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <!-- SMTP Config Modal -->
+    <div id="smtpModal" class="modal">
+        <div class="modal-content">
+            <span class="close-modal" id="closeModal">&times;</span>
+            <h2>SMTP Configuration</h2>
+            <div class="form-group">
+                <label>Host</label>
+                <input type="text" id="smtpHost" placeholder="e.g. smtp.gmail.com">
+            </div>
+            <div class="form-group">
+                <label>Port</label>
+                <input type="number" id="smtpPort" placeholder="e.g. 587 or 465">
+            </div>
+            <div class="form-group">
+                <label>Secure (SSL/TLS)</label>
+                <input type="checkbox" id="smtpSecure" style="width: auto;">
+            </div>
+            <div class="form-group">
+                <label>User (Email)</label>
+                <input type="text" id="smtpUser" placeholder="email@example.com">
+            </div>
+            <div class="form-group">
+                <label>Password</label>
+                <input type="password" id="smtpPass" placeholder="App Password">
+            </div>
+            <hr style="border-color: #444; margin: 15px 0;">
+            <div class="form-group">
+                <label>From Address</label>
+                <input type="text" id="smtpFrom" placeholder="alerts@example.com">
+            </div>
+            <div class="form-group">
+                <label>To Address(es)</label>
+                <input type="text" id="smtpTo" placeholder="admin@example.com, manager@example.com">
+            </div>
+            <div class="modal-actions">
+                <button id="testSmtpBtn" class="test-btn">Test Connection</button>
+                <button id="saveSmtpBtn" class="save-btn">Save Configuration</button>
+            </div>
+            <div id="smtpStatus" style="margin-top: 10px; font-size: 0.9rem;"></div>
         </div>
     </div>
 
